updating our details

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm from..</h1>
+      <p>My name is Victoria, I'm a goal driven, self motivated individual, some people call me a Jack of All Trade lol & also I have smile that will light up the room</p>
+      <h1>Where I'm from...</h1>
       <p>Kansas City MO</p>
       <h1>What's your Favorite Hobby?</h1>
       <p>My hobbies are reading books, sewing, playing video games, exploring new adventures</p>
