--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What's your Favorite Hobby?</h1>
       <p>My hobbies are reading books, sewing, playing video games, exploring new adventures</p>
       <h1>What is your dream job?</h1>
-      <p>My dream job now will be a successful Web Developer</p>
+      <p>My dream job now will be becoming a successful Web Developer</p>
       <h1>Where do you live?</h1>
       <p>Raytown MO</p>
       <h1>Why do you want to be a web developer?</h1>
